--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
         <a href="mailto:fahad@alolayan.me" class="w-full bg-red-600 hover:bg-red-500 text-white font-semibold py-2 rounded-xl shadow-lg transition transform hover:scale-105 flex items-center justify-center">
           <i class="fas fa-envelope"></i>
         </a>
-        <a href="https://sa.linkedin.com/in/fahad-alolayan-034722333" class="w-full bg-blue-700 hover:bg-blue-600 text-white font-semibold py-2 rounded-xl shadow-lg transition transform hover:scale-105 flex items-center justify-center" target="_blank">
+        <a href="https://sa.linkedin.com/in/alolayanix" class="w-full bg-blue-700 hover:bg-blue-600 text-white font-semibold py-2 rounded-xl shadow-lg transition transform hover:scale-105 flex items-center justify-center" target="_blank">
           <i class="fab fa-linkedin"></i>
         </a>
         <a href="https://github.com/alolayanix" class="w-full bg-gray-800 hover:bg-gray-700 text-white font-semibold py-2 rounded-xl shadow-lg transition transform hover:scale-105 flex items-center justify-center" target="_blank">
